tests/fixtures/guardrails/invalid/dynamic-direct-admin-access/app/routes/products.ts
export async function action() {
  return import("~/platform/shopify/admin.server");
}
